--- a/Exercise_form/Exercise_form.csproj
+++ b/Exercise_form/Exercise_form.csproj
@@ -275,6 +275,12 @@
     <Compile Include="password.Designer.cs">
       <DependentUpon>password.cs</DependentUpon>
     </Compile>
+    <Compile Include="picZoom.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="picZoom.Designer.cs">
+      <DependentUpon>picZoom.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RichTextBoxPrinter.cs" />
@@ -410,6 +416,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="password.resx">
       <DependentUpon>password.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="picZoom.resx">
+      <DependentUpon>picZoom.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
