--- a/Exercise_DAL/App.Config
+++ b/Exercise_DAL/App.Config
@@ -5,7 +5,10 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <connectionStrings>
-    <add name="Exercise_ERContainer" connectionString="metadata=res://*/Exercise_ER.csdl|res://*/Exercise_ER.ssdl|res://*/Exercise_ER.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=SPU1536-0003\SQL2012;initial catalog=db_exercise;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="Exercise_ERContainer" connectionString="metadata=res://*/Exercise_ER.csdl|res://*/Exercise_ER.ssdl|res://*/Exercise_ER.msl;
+         provider=System.Data.SqlClient;provider connection string=&quot;
+                          data source=win-DB;initial catalog=db_exercise;integrated security=True;
+                          multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
