--- a/DB_service/Web.config
+++ b/DB_service/Web.config
@@ -35,7 +35,10 @@
 
 
   <connectionStrings>
-    <add name="Exercise_ERContainer" connectionString="metadata=res://*/Exercise_ER.csdl|res://*/Exercise_ER.ssdl|res://*/Exercise_ER.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=SPU1536-0003\SQL2012;initial catalog=db_exercise;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="Exercise_ERContainer" connectionString="metadata=res://*/Exercise_ER.csdl|res://*/Exercise_ER.ssdl|res://*/Exercise_ER.msl;
+         provider=System.Data.SqlClient;provider connection string=&quot;
+                          data source=win-DB;initial catalog=db_exercise;integrated security=True;
+                          multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   
 
