--- a/DB_service/Web.config
+++ b/DB_service/Web.config
@@ -36,9 +36,9 @@
 
   <connectionStrings>
     <add name="Exercise_ERContainer" connectionString="metadata=res://*/Exercise_ER.csdl|res://*/Exercise_ER.ssdl|res://*/Exercise_ER.msl;
-         provider=System.Data.SqlClient;provider connection string=&quot;
-                          data source=win-DB;initial catalog=db_exercise;integrated security=True;
-                          multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+         provider=System.Data.SqlClient;
+        provider connection string=&quot;Data Source=192.168.101.215;Initial Catalog=db_exercise;User ID=sa;Password=cs123321&quot;"
+         providerName="System.Data.EntityClient" />
   </connectionStrings>
   
 
