--- a/Exercise_form/App.config
+++ b/Exercise_form/App.config
@@ -16,7 +16,7 @@
       </basicHttpBinding>
     </bindings>
     <client>
-      <endpoint address="http://localhost:65271/Service_stu.svc" binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IService_stu" contract="ServiceReference2.IService_stu" name="BasicHttpBinding_IService_stu" />
+      <endpoint address="http://192.168.101.215:8002/Service_stu.svc" binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IService_stu" contract="ServiceReference2.IService_stu" name="BasicHttpBinding_IService_stu" />
     </client>
   </system.serviceModel>
   <entityFramework>
@@ -37,7 +37,8 @@
   </runtime>
 
   <appSettings>
-    <add key="WCFIP" value="http://localhost:1800/WcfDataServicequestion.svc"/>
+    <!--add key="WCFIP" value="http://localhost:1800//WcfDataServicequestion.svc"/-->
+    <add key="WCFIP" value="http://192.168.101.215:8001/WcfDataServicequestion.svc"/>
     <add key="maxsize" value="5000000"/>
 
   </appSettings>
