--- a/Exercise_DAL/App.Config
+++ b/Exercise_DAL/App.Config
@@ -6,9 +6,10 @@
   <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <connectionStrings>
     <add name="Exercise_ERContainer" connectionString="metadata=res://*/Exercise_ER.csdl|res://*/Exercise_ER.ssdl|res://*/Exercise_ER.msl;
-         provider=System.Data.SqlClient;provider connection string=&quot;
-                          data source=win-DB;initial catalog=db_exercise;integrated security=True;
-                          multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+         provider=System.Data.SqlClient;
+         provider connection string=&quot;
+                          provider connection string=&quot;Data Source=192.168.101.215;Initial Catalog=db_exercise;User ID=sa;Password=cs123321&quot;"
+         providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
