--- a/WCFDBservice/Web.config
+++ b/WCFDBservice/Web.config
@@ -28,9 +28,9 @@
   </system.codedom>
   <connectionStrings><add name="db_exerciseEntities" 
                           connectionString="metadata=res://*/questions.csdl|res://*/questions.ssdl|res://*/questions.msl;
-                          provider=System.Data.SqlClient;provider connection string=&quot;
-                          data source=win-DB;initial catalog=db_exercise;integrated security=True;
-                          multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+                          provider=System.Data.SqlClient;
+                          provider connection string=&quot;Data Source=192.168.101.215;Initial Catalog=db_exercise;User ID=sa;Password=cs123321&quot;" 
+                           providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
