--- a/Exercise_form/App.config
+++ b/Exercise_form/App.config
@@ -16,7 +16,7 @@
       </basicHttpBinding>
     </bindings>
     <client>
-      <endpoint address="http://192.168.101.215:8002/Service_stu.svc" binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IService_stu" contract="ServiceReference2.IService_stu" name="BasicHttpBinding_IService_stu" />
+      <endpoint address="http://localhost:65271/Service_stu.svc" binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IService_stu" contract="ServiceReference2.IService_stu" name="BasicHttpBinding_IService_stu" />
     </client>
   </system.serviceModel>
   <entityFramework>
@@ -34,12 +34,34 @@
 
 
 
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+
+
+
+      <dependentAssembly>
+
+
+
+        <assemblyIdentity name="Spire.Pdf" publicKeyToken="663f351905198cb3" culture="neutral" />
+
+
+
+        <bindingRedirect oldVersion="0.0.0.0-5.1.7.20040" newVersion="5.1.7.20040" />
+
+
+
+      </dependentAssembly>
+
+
+
+    </assemblyBinding>
+
   </runtime>
 
   <appSettings>
-    <!--add key="WCFIP" value="http://localhost:1800//WcfDataServicequestion.svc"/-->
-    <add key="WCFIP" value="http://192.168.101.215:8001/WcfDataServicequestion.svc"/>
-    <add key="maxsize" value="5000000"/>
+    <add key="WCFIP" value="http://localhost:1800//WcfDataServicequestion.svc" />
+    <!--add key="WCFIP" value="http://192.168.101.215:8001/WcfDataServicequestion.svc"/-->
+    <add key="maxsize" value="5000000" />
 
   </appSettings>
 </configuration>
