--- a/Exercise_form/packages.config
+++ b/Exercise_form/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="FreeSpire.DocViewer" version="4.1.0" targetFramework="net452" />
   <package id="FreeSpire.Office" version="4.3.1" targetFramework="net452" />
   <package id="HtmlRenderer.Core" version="1.5.0.6" targetFramework="net452" />
   <package id="HtmlRenderer.WinForms" version="1.5.0.6" targetFramework="net452" />
