--- a/Exercise_student/packages.config
+++ b/Exercise_student/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="FreeSpire.Doc" version="7.11.0" targetFramework="net452" />
+  <package id="FreeSpire.DocViewer" version="4.1.0" targetFramework="net452" />
   <package id="Microsoft.Data.Edm" version="5.6.4" targetFramework="net452" />
   <package id="Microsoft.Data.OData" version="5.6.4" targetFramework="net452" />
   <package id="Microsoft.Data.Services.Client" version="5.6.4" targetFramework="net452" />
