--- a/Exercise_form/Exercise_form.csproj
+++ b/Exercise_form/Exercise_form.csproj
@@ -209,6 +209,12 @@
     <Compile Include="EditTestPaper.Designer.cs">
       <DependentUpon>EditTestPaper.cs</DependentUpon>
     </Compile>
+    <Compile Include="Edit_cal_exp.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Edit_cal_exp.Designer.cs">
+      <DependentUpon>Edit_cal_exp.cs</DependentUpon>
+    </Compile>
     <Compile Include="Edit_cal_exerL.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -395,6 +401,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="EditTestPaper.resx">
       <DependentUpon>EditTestPaper.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Edit_cal_exp.resx">
+      <DependentUpon>Edit_cal_exp.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Edit_cal_exerL.resx">
       <DependentUpon>Edit_cal_exerL.cs</DependentUpon>
