--- a/WCFDBservice/Web.config
+++ b/WCFDBservice/Web.config
@@ -26,12 +26,7 @@
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:14 /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
-  <connectionStrings><add name="db_exerciseEntities" 
-                          connectionString="metadata=res://*/questions.csdl|res://*/questions.ssdl|res://*/questions.msl;
-                          provider=System.Data.SqlClient;
-                          provider connection string=&quot;Data Source=192.168.101.215;Initial Catalog=db_exercise;User ID=sa;Password=cs123321&quot;" 
-                           providerName="System.Data.EntityClient" />
-  </connectionStrings>
+  <connectionStrings><add name="db_exerciseEntities" connectionString="metadata=res://*/questions.csdl|res://*/questions.ssdl|res://*/questions.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=192.168.101.215;initial catalog=db_exercise;user id=sa;password=cs123321;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
