--- a/Exercise_student/Exercise_student.csproj
+++ b/Exercise_student/Exercise_student.csproj
@@ -127,6 +127,12 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Reference.datasvcmap</DependentUpon>
     </Compile>
+    <Compile Include="shiyan.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="shiyan.Designer.cs">
+      <DependentUpon>shiyan.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="do.resx">
       <DependentUpon>do.cs</DependentUpon>
     </EmbeddedResource>
@@ -151,6 +157,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="shiyan.resx">
+      <DependentUpon>shiyan.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
