--- a/WCFDBservice/WCFDBservice.csproj
+++ b/WCFDBservice/WCFDBservice.csproj
@@ -203,6 +203,9 @@
     <Compile Include="View_class_exp.cs">
       <DependentUpon>questions.tt</DependentUpon>
     </Compile>
+    <Compile Include="View_class_student.cs">
+      <DependentUpon>questions.tt</DependentUpon>
+    </Compile>
     <Compile Include="View_detai_exerL.cs">
       <DependentUpon>questions.tt</DependentUpon>
     </Compile>
