--- a/Exercise_DAL/Exercise_DAL.csproj
+++ b/Exercise_DAL/Exercise_DAL.csproj
@@ -82,6 +82,11 @@
       <DependentUpon>Exercise_ER.edmx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="Studenttemp.cs" />
     <Compile Include="StudInfo1.cs">
       <DependentUpon>Exercise_ER.tt</DependentUpon>
@@ -119,6 +124,10 @@
   <ItemGroup>
     <EmbeddedResource Include="EditTestPaper.resx">
       <DependentUpon>EditTestPaper.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
