--- a/Exercise_form/App.config
+++ b/Exercise_form/App.config
@@ -34,25 +34,61 @@
 
 
 
+    
+
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
 
 
 
-      <dependentAssembly>
+    
+
+         <dependentAssembly>
 
 
 
-        <assemblyIdentity name="Spire.Pdf" publicKeyToken="663f351905198cb3" culture="neutral" />
+    
+
+              <assemblyIdentity name="Spire.License" publicKeyToken="b1144360237c8b3f" culture="neutral" />
 
 
 
-        <bindingRedirect oldVersion="0.0.0.0-5.1.7.20040" newVersion="5.1.7.20040" />
+    
+
+              <bindingRedirect oldVersion="0.0.0.0-1.3.7.40" newVersion="1.3.7.40" />
 
 
 
-      </dependentAssembly>
+    
+
+         </dependentAssembly>
 
 
+
+    
+
+         <dependentAssembly>
+
+
+
+    
+
+              <assemblyIdentity name="Spire.Pdf" publicKeyToken="663f351905198cb3" culture="neutral" />
+
+
+
+    
+
+              <bindingRedirect oldVersion="0.0.0.0-5.1.7.20040" newVersion="5.1.7.20040" />
+
+
+
+    
+
+         </dependentAssembly>
+
+
+
+    
 
     </assemblyBinding>
 
