--- a/StudentWeb/StudentWeb.csproj
+++ b/StudentWeb/StudentWeb.csproj
@@ -253,6 +253,7 @@
     <Content Include="result2.aspx" />
     <Content Include="TaskList.aspx" />
     <Content Include="Login.aspx" />
+    <None Include="Properties\PublishProfiles\studentWeb.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\ai.0.22.9-build00167.js" />
     <Content Include="Scripts\ai.0.22.9-build00167.min.js" />
