--- a/StudentWeb/StudentWeb.csproj
+++ b/StudentWeb/StudentWeb.csproj
@@ -241,6 +241,7 @@
     <Content Include="detail4.aspx" />
     <Content Include="detail3.aspx" />
     <Content Include="detail2.aspx" />
+    <Content Include="experiment.aspx" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
     <Content Include="fonts\glyphicons-halflings-regular.ttf" />
@@ -474,6 +475,13 @@
     </Compile>
     <Compile Include="detail2.aspx.designer.cs">
       <DependentUpon>detail2.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="experiment.aspx.cs">
+      <DependentUpon>experiment.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="experiment.aspx.designer.cs">
+      <DependentUpon>experiment.aspx</DependentUpon>
     </Compile>
     <Compile Include="extime.cs" />
     <Compile Include="Global.asax.cs">
