--- a/StudentWeb/Web.config
+++ b/StudentWeb/Web.config
@@ -14,7 +14,8 @@
   <system.web>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.5.2" />
-    <httpRuntime targetFramework="4.5.2" />
+    <httpRuntime targetFramework="4.5.2" maxRequestLength="104857600" executionTimeout="3600" />
+  
     <pages>
       <namespaces>
         <add namespace="System.Web.Optimization" />
@@ -62,7 +63,7 @@
     <httpModules>
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
     </httpModules>
- 
+   
   </system.web>
   <system.webServer>
     <modules>
